# devdash

./: .clang-format  .clang-tidy  .gitignore  .qmlls.ini  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  codecov.yml
.claude/: mcp.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  setup-vcan.sh  start-display.sh
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  FetchDependencies.cmake  Sanitizers.cmake  StaticAnalysis.cmake
docs/: README.md
docs/00-getting-started/: development-environment.md  development-setup.md  macos-utm-setup.md  quick-start.md  running-tests.md
docs/01-architecture/: dash-protocol.md  data-broker.md  overview.md  protocol-adapters.md  ui-layer.md  unit-conversion.md  vehicle-profiles.md
docs/02-api-reference/: core-interfaces.md  data-broker-api.md  haltech-protocol.md  vehicle-profiles.md
docs/02-user-guide/: testing-with-mock-data.md
docs/03-contributing/: adding-adapters.md  adding-gauges.md  code-style.md  development-scripts.md  testing-guidelines.md
docs/10-implementation/00-overview/: project-spec.md  repo-setup-reference.md
docs/10-implementation/02-haltech-adapter/: haltech-adapter.md
docs/10-implementation/03-instrument-cluster/: adding-data-sources.md  adding-gauges.md  layout-system.md
docs/10-implementation/07-hardware-deployment/: hardware-reference.md
docs/reference/: channel-namespace.md  devtools-mcp-integration.md  unit-types.md
profiles/: channels-example.json  example-automatic.json  example-haltech.json  example-simulator.json  haltech-vcan.json
protocols/haltech/: haltech-can-protocol-v2.35.json  haltech-pd16-can-protocol.json
schemas/: channels.schema.json
scripts/: build  check-qml  format  format-all.sh  lint  list-scenarios  run-with-mock  run-with-pd16  setup-haltech-mock  setup-utm-vm.sh  setup-vcan.sh  test  test-ci-local
src/: CMakeLists.txt  main.cpp
src/adapters/: CMakeLists.txt  ProtocolAdapterFactory.cpp  ProtocolAdapterFactory.h
src/adapters/haltech/: HaltechAdapter.cpp  HaltechAdapter.h  HaltechProtocol.cpp  HaltechProtocol.h  PD16Protocol.cpp  PD16Protocol.h
src/adapters/simulator/: SimulatorAdapter.cpp  SimulatorAdapter.h
src/cluster/: CMakeLists.txt  ClusterWindow.cpp  ClusterWindow.h
src/cluster/qml/: ClusterMain.qml  ClusterMain.qml.backup
src/cluster/qml/gauges/: PrimitivesTest.qml  Tachometer.qml  Tachometer.qml.backup
src/cluster/qml/gauges/primitives.backup/: GaugeNeedle.qml  GaugeTick.qml  GaugeTickLabel.qml
src/cluster/qml/gauges/radial/: RadialGauge.qml
src/cluster/qml/gauges/radial/compounds/: GaugeTickRing.qml  RollingDigitReadout.qml
src/cluster/qml/gauges/radial/primitives/: GaugeArc.qml  GaugeNeedleClassic.qml
src/core/: CMakeLists.txt  DataBroker.cpp  DataBroker.h  IProtocolAdapter.h
src/core/broker/: DataBroker.cpp  DataBroker.h
src/core/channels/: ChannelTypes.h  ChannelUpdateQueue.cpp  ChannelUpdateQueue.h
src/core/conversion/: DefaultUnitConverter.cpp  DefaultUnitConverter.h
src/core/devtools/: DevToolsServer.cpp  DevToolsServer.h
src/core/interfaces/: IDataSource.h  IProtocolAdapter.h  IUnitConverter.h
src/core/logging/: LogCategories.cpp  LogCategories.h  LogManager.cpp  LogManager.h
src/headunit/: CMakeLists.txt  HeadUnitWindow.cpp  HeadUnitWindow.h
src/headunit/qml/: HeadUnitMain.qml
tests/: CMakeLists.txt  test_main.cpp
tests/adapters/: test_protocol_adapter_factory.cpp
tests/adapters/haltech/: test_haltech_protocol.cpp  test_pd16_protocol.cpp
tests/adapters/simulator/: test_simulator_adapter.cpp
tests/cluster/: test_qml_loading.cpp
tests/core/: test_data_broker.cpp
tests/core/broker/: test_data_broker.cpp
tests/core/conversion/: test_default_unit_converter.cpp
tools/mcp/: README.md  pyproject.toml
tools/mcp/devdash_mcp/: __init__.py  __main__.py  server.py
