[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devdash-mcp"
version = "0.1.0"
description = "MCP server for DevDash UI visibility and telemetry access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
devdash-mcp = "devdash_mcp.server:main"
